# relayer-data-api

./: '  .compose.env  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  init_test_db.sh  redis_script.lua
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yml
authenticator/: Dockerfile  nginx.conf
authenticator/conf.d/: authenticator.conf
authenticator/modules/: .check-token.lua.swp  authenticator.lua  check-token.lua  jwt-secret.lua
codes/: questdb.rs  schema_commands_events.rs
docs/: API.md  account_summary_by_twilight_address.md  all_account_summaries.md  apy_chart.md  candle_data.md  private_api.md  public_api.md  transaction_hashes.md
migrations/2022-12-12-111357_initial-schema/: down.sql  up.sql
migrations/2023-05-29-113217_add-lend-pool/: down.sql  up.sql
migrations/2023-07-10-121741_private-api/: down.sql  up.sql
migrations/2023-08-08-101917_add-ts-index/: down.sql  up.sql
migrations/2023-08-14-122725_change-uuid-types/: up.sql
migrations/2023-10-02-120217_address_customer_id/: down.sql  up.sql
migrations/2024-01-20-160022_unique-constraint/: down.sql  up.sql
migrations/2024-02-08-234927_tx-hash-table/: down.sql  up.sql
migrations/2024-03-26-213323_add_aggregation_tables/: down.sql  up.sql
migrations/2024-03-27-065655_alter_transaction_hash/: down.sql  up.sql
migrations/2024-03-27-095235_order_status/: down.sql  up.sql
migrations/2024-06-20-130635_candle_data_trigger/: up.sql
migrations/2024-07-26-163222_funding_updates_table/: down.sql  up.sql
migrations/2025-06-23-213723_create_orderbook_view/: down.sql  up.sql
migrations/2025-07-02-150000_fee_columns_and_fee_history/: down.sql  up.sql
migrations/2025-07-03-120000_create_trigger_on_funding_updated/: down.sql  up.sql
migrations/2025-07-03-120000_create_trigger_on_funding_updated_and_orderbook/: down.sql  up.sql
migrations/2025-09-30-192021_apy-history/: down.sql  up.sql
migrations/2025-12-01-061135_alter_order_status_sorted_set/: down.sql  up.sql
migrations/2026-01-27-211240_open_interest/: down.sql  up.sql
migrations/2026-01-28-221352_trader_order_summary_by_t_address/: down.sql  up.sql
migrations/2026-02-01-204628_update_trader_order_funding_trigger/: down.sql  up.sql
migrations/2026-02-09-000000_risk_engine_update/: down.sql  up.sql
migrations/2026-02-10-100000_fix_candle_aggregation/: down.sql  up.sql
migrations/2026-02-11-000000_risk_params_update/: down.sql  up.sql
migrations/2026-02-12-000000_twilight_qq_account_link/: down.sql  up.sql
migrations/2026-02-12-100000_use_qq_link_for_t_address_summary/: down.sql  up.sql
migrations/2026-02-20-000000_fix_apy_series_exponent/: down.sql  up.sql
migrations/2026-02-20-100000_risk_engine_pause_flags/: down.sql  up.sql
migrations/2026-02-21-000000_risk_engine_pending_exposure/: down.sql  up.sql
migrations/2026-02-21-100000_add_mm_ratio_to_risk_params/: down.sql  up.sql
migrations/2026-02-24-000000_all_account_summaries/: down.sql  up.sql
migrations/2026-02-25-000000_fix_orderbook_remove_close_limit/: down.sql  up.sql
migrations/2026-03-05-000000_add_created_time_sorted_set_command/: down.sql  up.sql
migrations/2026-03-09-000000_txhash_improvements/: down.sql  up.sql
migrations/2026-03-12-000000_add_new_order_type_and_status_variants/: down.sql  up.sql
migrations/2026-03-16-000000_open_interest_chart/: down.sql  up.sql
postman/: Twilight RelayerAPI Postman Requests.postman_collection.json  relayerapi-postman.json  rpc-postman.json
sample codes/: apischema.rs  kafkaconsumer.rs  snapshot_sample.rs
scripts/: curl-format.txt  example.js  gen_dataset.py  get_candles.sh  get_pnl.sh  get_trades.sh  init_test_db.sh  order_book.sh  package.json  pricer.sh  repair_candles.sql  run.sh  test_set.sql
scripts/gen-token/: gen.js  package-lock.json  package.json
scripts/websocket-test/: package.json  test.js
specs/: README.md  privateAPI.md  publicAPI.md
specs/APIDocs/: 01. publicAPI.md  01.1 publicAPI New List.md  02. PrivateDataApi.md  03. PrivateOrderApi.md  04. AdminApi.md
specs/privateapi/: InputOutput.md  privateAPI.md  schema.md
src/: \  archiver.rs  auth.rs  database.rs  error.rs  kafka.rs  lib.rs  main.rs  migrations.rs  models.rs  rpc.rs  sql_types.rs  ws.rs
src/database/: archiver.rs  models.rs  schema.rs  sql_types.rs
src/rpc/: headers.rs  methods.rs  private_methods.rs  public_methods.rs  types.rs  util.rs
src/ws/: methods.rs
test_data/: test_prices.sql
