[package]
name = "twilight-relayerAPI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "archiver"

[[bin]]
name = "api"

[lib]
name = "relayerarchiverlib"
path = "src/lib.rs"


[dependencies]
bigdecimal = { version = "0.4.1", features = ["serde"] }
bincode = "1.3"
chrono = { version = "0.4.23", features = ["clock", "serde"] }
crossbeam-channel = "0.5.6"
diesel = { version = "2.0.2", features = [
    "uuid",
    "bigdecimal",
    "chrono",
    "numeric",
    "postgres_backend",
    "postgres",
    "r2d2",
    "serde_json",
] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
digest = "0.10.7"
dotenv = "0.15.0"
futures-util = "0.3"
getrandom = "0.2.8"
hex = "0.4.3"
hmac = "0.12.1"
http = "0.2"
http-body = "0.4"
hyper = "0.14.26"
itertools = "0.12.0"
jsonrpsee = { version = "0.16.2", features = [
    "server",
    "client",
    "jsonrpsee-core",
    "macros",
] }
jwt = "0.16.0"
kafka = "0.9.0"
log = "0.4.17"
r2d2 = "0.8.10"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
structopt = "0.3.26"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.4", features = ["make", "util"] }
tower-http = { version = "0.4", features = [
    "auth",
    "cors",
    "sensitive-headers",
    "validate-request",
] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["serde", "v4", "v7"] }
verify-keplr-sign = "0.1.0"
twilight-relayer-rust = { git = "ssh://git@github.com/twilight-project/twilight-relayer.git", branch = "develop-rpc" }

[dependencies.zkos-relayer-wallet]
git = "ssh://git@github.com/twilight-project/zkos-relayer-wallet.git"
branch = "develop-rpc"
[dependencies.zkos-client-wallet]
git = "ssh://git@github.com/twilight-project/zkos-client-wallet.git"
branch = "develop-rpc"
