[package]
name = "relayer-data-api"
version = "0.2.0"
edition = "2021"
authors = ["Twilight Project"]
description = "A high-throughput data archiving and retrieval API service for the Twilight Relayer Core"
license = "Apache-2.0"
repository = "https://github.com/twilight-project/relayer-data-api"
readme = "README.md"
keywords = ["relayer", "data-api", "archiver", "twilight", "postgres"]
categories = ["web-programming", "api-bindings", "database"]


[[bin]]
name = "archiver"

[[bin]]
name = "api"

[[bin]]
name = "auth"

[lib]
name = "relayerarchiverlib"
path = "src/lib.rs"


[dependencies]
bigdecimal = { version = "0.4.1", features = ["serde"] }
bincode = "1.3.3"
chrono = { version = "0.4.23", features = ["clock", "serde"] }
crossbeam-channel = "0.5.6"
diesel = { version = "2.0.2", features = [
    "uuid",
    "bigdecimal",
    "chrono",
    "numeric",
    "postgres_backend",
    "postgres",
    "r2d2",
    "serde_json",
] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
digest = "0.10.7"
dotenv = "0.15.0"
futures-util = "0.3"
getrandom = "0.2.8"
hex = "0.4.3"
hmac = "0.12.1"
http = "0.2"
http-body = "0.4"
hyper = "0.14.26"
itertools = "0.12.0"
jsonrpsee = { version = "0.16.2", features = [
    "server",
    "client",
    "jsonrpsee-core",
    "macros",
] }
jwt = "0.16.0"
kafka = "0.9.0"
log = "0.4.17"
r2d2 = "0.8.10"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
structopt = "0.3.26"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.4", features = ["make", "util"] }
tower-http = { version = "0.4", features = [
    "auth",
    "cors",
    "sensitive-headers",
    "validate-request",
] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["serde", "v4", "v7"] }
verify-keplr-sign = "0.1.0"
redis = { version = "0.25.4", features = ["r2d2"] }

[dependencies.relayer-core]
git = "https://git@github.com/twilight-project/relayer-core.git"
# tag = "v0.2.0"
branch = "main"
# path = "../relayer-core"
